# diabetes

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
data/: cleaned_data.parquet  data_split.parquet
notebooks/: eda_cleaning.ipynb
scripts/: __main__.py  evaluation.py  model_training.py  visualisation.py
src/diabetes/data/: __init__.py  get_data.py  health_check.py  load_data.py  sample_split.py  save_data.py
src/diabetes/evaluation/: __init__.py  evaluation_predictions.py
src/diabetes/feature_engineering/: __init__.py  features.py
src/diabetes/modelling/: __init__.py  pipelines.py  training.py
src/diabetes/preprocessing/: __init__.py  cleaning_data.py
src/diabetes/visualisation/: __init__.py  visualise.py
